[package]
name = "transmission"
version = "0.1.0"
authors = ["Steven vanZyl <rushsteve1@rushsteve1.us>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://gitlab.com/tornado-torrent/transmission-rs"
categories = ["api-bindings"]
keywords = ["torrent", "bittorrent", "transmission"]

[badges]
gitlab = { repository = "tornado-torrent/transmission-rs", branch = "master" }

[dependencies]
transmission-sys = "0.1"
serde = "^1.0"
chrono = { version = "0.4", features = ["serde"] }