[package]
name = "transmission"
version = "0.3.1"
authors = ["Steven vanZyl <rushsteve1@rushsteve1.us>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://gitlab.com/tornado-torrent/transmission-rs"
categories = ["api-bindings"]
keywords = ["torrent", "bittorrent", "transmission"]
description = "A safe ergonomic wrapper for the Transmission BitTorrent library."

[badges]
gitlab = { repository = "tornado-torrent/transmission-rs", branch = "master" }

[features]
docs-only = ["transmission-sys/docs-only"]

[dependencies]
transmission-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[package.metadata.docs.rs]
features = [ "docs-only" ]
no-default-features = true
all-features = false
